tests/should_fail/import_duplicate_name_dep2.fit
resource Connection { cleanup: close_conn_b }
fn close_conn_b(c: move Connection) -> ()
